use different method to get the url